--- a/index.html
+++ b/index.html
@@ -5,19 +5,36 @@
 </body>
 <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
-<script>
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<script type="text/babel">
     const root = document.getElementById("root");
-    const h3 = React.createElement("h3",{
-      id:"title",
-      onMouseEnter: () => console.log("Mouse Enter"), // 중간 단어 대문자로 할것
-    }, "Hellp I`m a Span");
-    const btn = React.createElement("button",{
-      onClick: () => console.log("Clicked"),
-      style:{
-        backgroundColor:"tomato",
-      }
-    },"Click me");
-    const container = React.createElement("div",null,[h3,btn]);
+
+    const Title = (
+        <h3 id="title" onMouseEnter={() => console.log("Mouse Enter")}>
+        Hellp I`m a Title
+        </h3>
+      );
+    // const h3 = React.createElement("h3",{
+    //   id:"title",
+    //   onMouseEnter: () => console.log("Mouse Enter"), // 중간 단어 대문자로 할것
+    // }, "Hellp I`m a Span");
+    
+    const Button = (
+      <button 
+        style={{
+          backgroundColor:"tomato",
+        }} 
+        onClick={() => console.log("Clicked")}>
+        Click Me
+      </button>
+    );
+    // const btn = React.createElement("button",{
+    //   onClick: () => console.log("Clicked"),
+    //   style:{
+    //     backgroundColor:"tomato",
+    //   }
+    // },"Click me");
+    const container = React.createElement("div",null,[Title,Button]);
     
     ReactDOM.render(container,root);
 </script>
