--- a/index.html
+++ b/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html>
-<body>
+  <body>
     <div id="root"></div>
-</body>
-<script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
-<script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
-<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-<script type="text/babel">
+  </body>
+  <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script type="text/babel">
     const root = document.getElementById("root");
 
-    const Title = (
+    function Title() {
+      return (
         <h3 id="title" onMouseEnter={() => console.log("Mouse Enter")}>
-        Hellp I`m a Title
+          Hellp I`m a Title
         </h3>
       );
+    }
     // const h3 = React.createElement("h3",{
     //   id:"title",
     //   onMouseEnter: () => console.log("Mouse Enter"), // 중간 단어 대문자로 할것
     // }, "Hellp I`m a Span");
-    
-    const Button = (
-      <button 
+
+    const Button = () => (
+      <button
         style={{
-          backgroundColor:"tomato",
-        }} 
-        onClick={() => console.log("Clicked")}>
+          backgroundColor: "tomato",
+        }}
+        onClick={() => console.log("Clicked")}
+      >
         Click Me
       </button>
     );
@@ -34,8 +37,13 @@
     //     backgroundColor:"tomato",
     //   }
     // },"Click me");
-    const container = React.createElement("div",null,[Title,Button]);
-    
-    ReactDOM.render(container,root);
-</script>
+    // const container = React.createElement("div",null,[Title,Button]);
+    const Container = () => (
+      <div>
+        <Title /> <Button />
+      </div>
+    );
+
+    ReactDOM.render(<Container />, root);
+  </script>
 </html>
