--- a/index.html
+++ b/index.html
@@ -8,41 +8,22 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.getElementById("root");
-
-    function Title() {
+    let counter = 0;
+    function countUp() {
+      counter = counter + 1;
+      render();
+    }
+    function render() {
+      ReactDOM.render(<Container />, root);
+    }
+    function Container() {
       return (
-        <h3 id="title" onMouseEnter={() => console.log("Mouse Enter")}>
-          Hellp I`m a Title
-        </h3>
+        <div>
+          <h3>Total click : {counter}</h3>
+          <button onClick={countUp}>Click Me</button>
+        </div>
       );
     }
-    // const h3 = React.createElement("h3",{
-    //   id:"title",
-    //   onMouseEnter: () => console.log("Mouse Enter"), // 중간 단어 대문자로 할것
-    // }, "Hellp I`m a Span");
-
-    const Button = () => (
-      <button
-        style={{
-          backgroundColor: "tomato",
-        }}
-        onClick={() => console.log("Clicked")}
-      >
-        Click Me
-      </button>
-    );
-    // const btn = React.createElement("button",{
-    //   onClick: () => console.log("Clicked"),
-    //   style:{
-    //     backgroundColor:"tomato",
-    //   }
-    // },"Click me");
-    // const container = React.createElement("div",null,[Title,Button]);
-    const Container = () => (
-      <div>
-        <Title /> <Button />
-      </div>
-    );
 
     ReactDOM.render(<Container />, root);
   </script>
