--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   function App() {
     const [counter, setCounter] = React.useState(0);
     const onClick = () => {
-      setCounter(counter + 1);
-
+      // setCounter(counter + 1);
+      setCounter((current) => current + 1); //안전
     };
     return (
       <div>
